archive/sidebar.css
.container {
  width: 100%;
}

.sidebar {
  background: #222;
  width: 13%;
  height: calc(100% - 60px);
  position: relative;
  float: left;
  overflow-y: auto;
}

.select-year {
  position: relative;
}

.select-year .dropdown {
  color: #ccc;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 10%;
  z-index: 1;
}

select.select-css {
  position: relative;
  width: 100%;
  color: #ccc;
  padding: 0 15px;
  text-align: center;
  margin-top: 45px;
  margin-bottom: 15px;
  background: #222;
  -webkit-appearance: none;
  font-size: 18px;
  border: none;
  padding: 0 auto;
  background: transparent;
  z-index: 2;
}

.sidebar ul {
  position: absolute;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.sidebar a {
  font-weight: normal;
}

.sidebar li {
  font-size: 14px;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: #bbb;
  margin: 0;
  padding: 10px;
  border-bottom: 1px solid #888;
}

.sidebar li.active {
  /* background: white;
    color: #222;*/
  /*font-weight: 600;*/
  background-color: #fff;
  color: #222;
}

.content-div {
  float: left;
  margin-top: 10px;
  width: 80%;
  padding: 20px;
  font-family: "Open Sans";
  height: 90%;
  overflow-y: scroll;
}

html,
body {
  overflow: hidden;
}

.container {
  padding: 0;
  margin-top: 60;
}

blockquote {
  margin-left: 0;
  padding-left: 20px;
  border-left: 5px solid rgb(221, 221, 221);
}

code {
  color: #bf616a;
  background: #f9f9f9;
  padding: 0.25em 0.5em;
  padding: 0;
  font-size: 100% !important;
  border-radius: 3px;
}

button {
  background: #e9e9e9;
  border: none;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: bold;
  border-radius: 8px;
  padding: 10px 24px;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}

button:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  bottom: 0;
  background: #003366;
  height: 4px;
  -webkit-transform: translateY(4px);
  transform: translateY(4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

button:hover:before,
button:focus:before,
button:active:before {
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

button:hover {
  cursor: pointer;
}

button:focus {
  outline: none;
}

button.active {
  background: #003366;
  color: #fff;
}

td {
  text-align: center;
  padding: 2px;
  border: 1px solid rgb(221, 221, 221);
}

.swatch {
  display: none;
}

